# paidy-test

./: README.md  docker-compose.yaml
docker/: Dockerfile  Server_dockerfile  entry.sh
paidy_dse/: .prefectignore  2408_local_deployment.yaml  docker-deployment.yaml  etl-daily.yaml  local-deployment.yaml  pyproject.toml
paidy_dse/data/sources2/: config_variables.csv
paidy_dse/flows/: etl.py  g2i_pipeline.py  r2g_pipeline.py  s2r_pipeline.py
paidy_dse/great_expectations/: config_variables.yml  great_expectations.yml
paidy_dse/great_expectations/checkpoints/: in_memory_stg_checkpoint(1).yml  in_memory_stg_checkpoint.yml  stg_checkpoint.yml
paidy_dse/great_expectations/expectations/: golden_validation.json  insight_validation.json
paidy_dse/scripts/: extract.py  init_deployment.py  init_envs.py  load.py  transformation.py  validation.py
paidy_dse/scripts/common/: helpers.py
paidy_dse/tests/: test_scripts.py
